--- a/ClienteAndroid/app/src/main/AndroidManifest.xml
+++ b/ClienteAndroid/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/ClienteAndroid">
-        <activity android:name=".activities.DashboardActivity"></activity>
+        <activity android:name=".activities.DisconnectedActivity"></activity>
+        <activity android:name=".activities.DashboardActivity" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/SplashTheme">
