--- a/Servidor/pom.xml
+++ b/Servidor/pom.xml
@@ -27,6 +27,12 @@
             <version>2.8.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.ucanaccess</groupId>
+            <artifactId>ucanaccess</artifactId>
+            <version>5.0.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
