--- a/ClienteEscritorio/pom.xml
+++ b/ClienteEscritorio/pom.xml
@@ -91,6 +91,12 @@
             <type>pom</type>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
+
     </dependencies>
 
 </project>
