--- a/ClienteAndroid/app/src/main/AndroidManifest.xml
+++ b/ClienteAndroid/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/ClienteAndroid">
-        <activity android:name=".activities.GroupsActivity"></activity>
+        <activity android:name=".activities.ScheduleActivity"></activity>
+        <activity android:name=".activities.SearchScheduleActivity" />
+        <activity android:name=".activities.GroupsActivity" />
         <activity android:name=".activities.SubjectsActivity" />
         <activity android:name=".activities.CoursesActivity" />
         <activity android:name=".activities.ClassroomsActivity" />
