--- a/ClienteEscritorio/pom.xml
+++ b/ClienteEscritorio/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>morales.david</groupId>
     <artifactId>ClienteEscritorio</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -95,6 +95,12 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20210307</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.69.Final</version>
         </dependency>
 
     </dependencies>
