--- a/Servidor/pom.xml
+++ b/Servidor/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>morales.david</groupId>
     <artifactId>Servidor</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -81,6 +81,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.69.Final</version>
         </dependency>
 
     </dependencies>
