--- a/ClienteAndroid/app/build.gradle
+++ b/ClienteAndroid/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "morales.david.android"
         minSdkVersion 24
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -42,5 +42,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.preference:preference:1.1.1'
 
+    implementation 'io.netty:netty-all:4.1.44.Final'
 
 }
