--- a/ClienteAndroid/app/build.gradle
+++ b/ClienteAndroid/app/build.gradle
@@ -3,29 +3,47 @@ plugins {
 }
 
 android {
+
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
+
         applicationId "morales.david.android"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 2
         versionName "1.1"
 
+        archivesBaseName = "sgh_android_v$versionName"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        debug {
+            applicationIdSuffix ".debug"
+            debuggable true
+        }
+
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    buildFeatures {
+        viewBinding true
+    }
+
 }
 
 dependencies {
@@ -41,6 +59,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.preference:preference:1.1.1'
+
+    implementation 'com.airbnb.android:lottie:3.7.0'
 
     implementation 'io.netty:netty-all:4.1.44.Final'
 
